--- a/thesis.tex
+++ b/thesis.tex
@@ -125,7 +125,10 @@ e-Print: {\tt 1612.07228 [hep-th]}
 \end{description}
 
 \prefacesection{Preface}
-   This thesis tells you all you need to know about...
+The unification of quantum mechanics and general relativity is the holy grail of fundamental theoretical physics. This thesis represents a small part of that endeavor, where we consider a number of problems that might be of interest to the theoretical studies of black holes and quantum cosmology. A natural question to ask is: how does the study of black holes and quantum cosmology help us unify quantum mechanics and general relativity? The answer lies in the simple observation that a black hole and our universe both share a number of key features that practically demand the simultaneous application of quantum mechanics and general relativity: they both have a singularity, where matter and energy are infinitely dense, and known laws of physics do not apply, as well as a horizon, which prevents spacetime events from making causal contact no matter how much they want to. They are also intrinsically gravitational systems, meaning that their classical (ie.~non-quantum) description involves only the spacetime geometry\footnote{One might argue that for a charged black hole the full description contains both the Maxwell field and the metric. This is certainly true, but the most important feature, ie.~the singularity and the event horizon structure, involve only the metric}. They therefore have become the primary objects to study if one wants to build a unified theory of quantum gravity, because it is in these two systems that the logical incompatibilities of quantum mechanics and general relativity become most apparent.
+
+One of the most serious incompabilities is that general relativity, being a geometric theory is intrinsically local, while quantum mechanics, being defined on a vector space, is intrinsically non-local. One promising resolution of this incompatibility is to define a ``holographic'' theory between a quantum mechanical model, and a (semi-)classical gravity in a spacetime with one additional spatial dimension. In other words, objects on the classical spacetime (called the bulk) are mapped into objects in the quantum mechanical model defined on its boundary. This thesis will therefore discuss three separate, but closely linked issues that all have something to do with building holographic theories between the bulk and the boundary. As these boundaries are all two-dimensional spheres, this is therefore a story of building holography on 2-spheres. Hence the title of this thesis.
+
 \prefacesection{Acknowledgements}
 First of all I would like to thank my advisor, Prof.~David Anthony Lowe, for guidance and advisory. I would also like to thank other faculty members in the high energy theory group, in particular my defense committee members and letter writers, Prof.~Antal Jevicki, Prof.~Marcus Spradlin, and Prof.~Stephon H.~Alexander, for their support. Finally, I would like to thank my friends within the department (and pity my enemies, both inside the department and elsewhere. Just kidding).
 
