--- a/thesis.tex
+++ b/thesis.tex
@@ -34,7 +34,7 @@
 \reader{Antal Jevicki}
 \reader{Stephon Haigh-Solomon Alexander}
 \dean{Andrew G.~Campbell}
-\abstract{The unification of quantum mechanics and general relativity is the holy grail of fundamental theoretical physics. This thesis represents a small part of that effort, where we consider a number of problems that might be of interest to the theoretical studies of black holes and quantum cosmology. How does the study of black holes and quantum cosmology help us unify quantum mechanics and general relativity, one might ask? The answer lies in the simple observation that a black hole and our universe both share a number of key features that practically demand the simultaneous application of quantum mechanics and general relativity. They both have a singularity, where matter and energy are infinitely dense, and known laws of physics do not apply, as well as a horizon, which prevents spacetime events from making causal contact no matter how much they want to. They are also intrinsically gravitational systems, meaning that their classical (ie.~non-quantum) description involves only the spacetime geometry (this is slightly less true for charged black holes, although their most important features are still gravitational). They therefore have become the primary objects to study if one wants to build a unified theory of quantum gravity, because it is in these two systems that the logical incompatibilities of quantum mechanics and general relativity become most apparent. One of the most severe incompabilities is that general relativity, being a geometric theory is intrinsically local, while quantum mechanics, being defined on a vector space, is intrinsically non-local. One promising resolution of this incompatibility is to define a ``holographic'' theory between a quantum mechanical model, and a (semi-)classical gravity in a spacetime with one additional spatial dimension. In other words, objects on the classical spacetime (called the bulk) are mapped into objects in the quantum mechanical model defined on its boundary. This thesis will therefore discuss three separate, but closely linked issues that all have something to do with building holographic theories between the bulk and the boundary. As these boundaries are all two-dimensional spheres, this is therefore a story of building holography on 2-spheres. Hence the title of this thesis.}
+\abstract{The unification of quantum mechanics and general relativity is the holy grail of fundamental theoretical physics. This thesis represents a small part of that effort, where we consider a number of problems that might be of interest to the theoretical studies of black holes and quantum cosmology. How does the study of black holes and quantum cosmology help us unify quantum mechanics and general relativity, one might ask? The answer lies in the simple observation that a black hole and our universe both share a number of key features that practically demand the simultaneous application of quantum mechanics and general relativity. They both have a singularity, where matter and energy are infinitely dense, and known laws of physics do not apply, as well as a horizon, which prevents spacetime events from making causal contact no matter how much they want to. They are also intrinsically gravitational systems, meaning that their classical (ie.~non-quantum) description involves only the spacetime geometry (this is slightly less true for charged black holes, although their most important features are still gravitational). They therefore have become the primary objects to study if one wants to build a unified theory of quantum gravity, because it is in these two systems that the logical incompatibilities of quantum mechanics and general relativity become most apparent. One of the most severe incompabilities is that general relativity, being a geometric theory is intrinsically local, while quantum mechanics, being defined on a vector space, is intrinsically non-local. One promising resolution of this incompatibility is to define a ``holographic'' theory between a quantum mechanical model, and a (semi-)classical gravity in a spacetime with one additional spatial dimension. This thesis will therefore discuss three separate, but closely linked issues that all have something to do with building holographic theories between the bulk and the boundary. As these boundaries are all two-dimensional spheres, this is therefore a story of building holography on 2-spheres. Hence the title of this thesis.}
 \abstractpage
 \abstractpage
 \beforepreface
@@ -138,6 +138,16 @@ Finally, a special thanks is awarded to Bioware Montreal for ruining the Mass Ef
 \afterpreface
 
 \chapter{Introduction}
+This thesis is based on the materials published in the following four papers:
+\begin{enumerate}
+  \item{Notes on Scrambling in Conformal Field Theory, {\sl Phys.Rev.D 98} (2018) 12, 126013}
+  \item{Holographic Map for Cosmological Horizons, {\sl Int.J.Mod.Phys.A} 35 (2020) 26, 2050158}
+  \item{Conformal Wave Expansions for Flat Space Amplitudes, {\sl JHEP} 07 (2021) 102}
+  \item{Conformal Wavefunctions for Graviton Amplitudes, {\sl JHEP} 01 (2022) 148}
+\end{enumerate}
+As we have explained in the Preface, the results in these papers will hopefully contribute to
+the overall goal of building a consistent theory that unites quantum mechanics and general
+relativity.
 
 \chapter{Notes on Scrambling in Conformal Field Theory}\label{chap:chaos}
 The onset of quantum chaos in quantum field theory may be studied
