--- a/thesis.tex
+++ b/thesis.tex
@@ -147,7 +147,9 @@ This thesis is based on the materials published in the following four papers:
 \end{enumerate}
 As we have explained in the Preface, the results in these papers will hopefully contribute to
 the overall goal of building a consistent theory that unites quantum mechanics and general
-relativity.
+relativity. There are several closely related ideas in play here, so in this Introduction
+we will review the relevant literature and explain how the results in the rest of the thesis
+are motivated by the 
 
 \chapter{Notes on Scrambling in Conformal Field Theory}\label{chap:chaos}
 The onset of quantum chaos in quantum field theory may be studied
