--- a/thesis.tex
+++ b/thesis.tex
@@ -148,8 +148,12 @@ This thesis is based on the materials published in the following four papers:
 As we have explained in the Preface, the results in these papers will hopefully contribute to
 the overall goal of building a consistent theory that unites quantum mechanics and general
 relativity. There are several closely related ideas in play here, so in this Introduction
-we will review the relevant literature and explain how the results in the rest of the thesis
-are motivated by the 
+we will review the relevant literature and explain how the work in the rest of the thesis
+are motivated by these ideas.
+
+The fundamental reason that it is so difficult to build a consistent quantum theory of
+gravity, is that the theory of general relativity and the theory of quantum mechanics
+are 
 
 \chapter{Notes on Scrambling in Conformal Field Theory}\label{chap:chaos}
 The onset of quantum chaos in quantum field theory may be studied
