--- a/thesis.tex
+++ b/thesis.tex
@@ -34,7 +34,7 @@
 \reader{Antal Jevicki}
 \reader{Stephon Haigh-Solomon Alexander}
 \dean{Andrew G.~Campbell}
-\abstract{The unification of quantum mechanics and general relativity is the holy grail of fundamental theoretical physics. This thesis represents a small part of that effort, where we consider a number of problems that might be of interest to the theoretical studies of black holes and quantum cosmology. How does the study of black holes and quantum cosmology help us unify quantum mechanics and general relativity, one might ask? The answer lies in the simple observation that a black hole and our universe both share a number of key features that practically demand the simultaneous application of quantum mechanics and general relativity. They both have a singularity, where matter and energy are infinitely dense, and known laws of physics do not apply, as well as a horizon, which prevents spacetime events from making causal contact no matter how much they want to. They are also intrinsically gravitational systems, meaning that their classical (ie.~non-quantum) description involves only the spacetime geometry (this is slightly less true for charged black holes, although their most important features are still gravitational). They therefore have become the primary objects to study if one wants to build a unified theory of quantum gravity, because it is in these two systems that the logical incompatibilities of quantum mechanics and general relativity become most apparent. One of the most severe incompabilities is that general relativity, being a geometric theory is intrinsically local, while quantum mechanics, being defined on a vector space, is intrinsically non-local. One promising resolution of this incompatibility is to define a ``holographic'' theory between a quantum mechanical model, and a (semi-)classical gravity in a spacetime with one additional spatial dimension. This thesis will therefore discuss three separate, but closely linked issues that all have something to do with building holographic theories between the bulk and the boundary. As these boundaries are all two-dimensional spheres, this is therefore a story of building holography on 2-spheres. Hence the title of this thesis.}
+\abstract{The unification of quantum mechanics and general relativity is the holy grail of fundamental theoretical physics. This thesis represents a small part of that effort, where we consider a number of problems that might be of interest to the theoretical studies of black holes and quantum cosmology. Why study black holes and quantum cosmology, one might ask? The answer lies in the fact that they are the only two systems that demand the simultaneous application of quantum mechanics and general relativity. In particular, both have event horizons, which are global structures of the spacetime that prevent events from making causal contact no matter how hard they try. They therefore have become the primary arenas where logical incompatibilities of quantum mechanics and general relativity become the most transparent. One of the most dramatic incompatibilities is the black hole information paradox, which concerns the unitarity of processes that involve the formation and the evaporation of black holes. This thesis will first discuss a proposed resolution to the information paradox, the so-called black hole complementarity program, and a closely linked issue known as quantum scrambling. We will then present a microscopic quantum model of the de-Sitter universe that incorporates the required quantum scrambling on the cosmological horizon. This quantum model of cosmology is a so-called ``holographic'' map between the stretched horizon of the de-Sitter spacetime and the static patch (colloquially known as the ``bulk''). Continuing in a similar vein, the rest of the thesis is concerned with building holographic theories between flat spacetime and its boundary, and we present two holographic theories of the flat spacetime, first for massive scalar particles and then extending the results to gravitons. As these all have something to do with mappings between boundary 2-spheres and their bulk, this is therefore a story of building holography on 2-spheres. Hence the title of this thesis.}
 \abstractpage
 \abstractpage
 \beforepreface
@@ -127,7 +127,7 @@ e-Print: {\tt 1612.07228 [hep-th]}
 \prefacesection{Preface}
 The unification of quantum mechanics and general relativity is the holy grail of fundamental theoretical physics. This thesis represents a small part of that effort, where we consider a number of problems that might be of interest to the theoretical studies of black holes and quantum cosmology. A natural question to ask is: how does the study of black holes and quantum cosmology help us unify quantum mechanics and general relativity? The answer lies in the simple observation that a black hole and our universe both share a number of key features that practically demand the simultaneous application of quantum mechanics and general relativity: they both have a singularity, where matter and energy are infinitely dense, and known laws of physics do not apply, as well as a horizon, which prevents spacetime events from making causal contact no matter how much they want to. They are also intrinsically gravitational systems, meaning that their classical (ie.~non-quantum) description involves only the spacetime geometry\footnote{One might argue that for a charged black hole the full description contains both the Maxwell field and the metric. This is certainly true, but the most important feature, ie.~the singularity and the event horizon structure, involve only the metric}. They therefore have become the primary objects to study if one wants to build a unified theory of quantum gravity, because it is in these two systems that the logical incompatibilities of quantum mechanics and general relativity become most apparent.
 
-One of the most serious incompabilities between quantum mechanics and general relativity is that general relativity, being a geometric theory, is intrinsically local, meaning that a spacetime event can only influence events that are within its light-cone, while quantum mechanics, being defined on a vector space, is intrinsically non-local, meaning that locally supported states that are spacelike separated can still be entangled quantum mechanically. One promising resolution of this incompatibility is to define a ``holographic'' theory between a quantum mechanical model, and a (semi-)classical gravity in a spacetime with one additional spatial dimension. In other words, objects on the classical spacetime (called the bulk) are mapped into objects in the quantum mechanical model defined on its boundary, and objects in the boundary quantum mechanical models are mapped into objects in the (semi-)classical local field theory in the bulk. This thesis will therefore discuss three separate, but closely linked issues that all have something to do with building holographic theories between the bulk and the boundary. We will apply the insights gained in the study of these issues to  As these boundaries are all two-dimensional spheres, this is therefore a story of building holography on 2-spheres. Hence the title of this thesis.
+One of the most fundamental reason that quantum mechanics is incompatible with general relativity is the existence of entangled states in quantum mechanics. This goes directly against general relativity, where arbitrary superpositions of spacetime geometries do not make any sense (especially when they have different topologies). The prevailing opinion at the moment of this writing is that one should expect general relativity to be an emergent theory as part of a quantum theory of spacetime. One promising idea in this direction is to define a ``holographic'' theory between a quantum mechanical model, and a (semi-)classical gravity in a spacetime with one additional spatial dimension. In other words, objects on the classical spacetime (called the bulk) are mapped into objects in the quantum mechanical model defined on its boundary, and objects in the boundary quantum mechanical models are mapped into objects in the (semi-)classical local field theory in the bulk. This thesis will discuss three separate, but closely linked issues that all have something to do with building holographic theories between the bulk and the boundary. As these boundaries are all two-dimensional spheres, this is therefore a story of building holography on 2-spheres. Hence the title of this thesis.
 
 \prefacesection{Acknowledgements}
 First of all I would like to thank my advisor, Prof.~David Anthony Lowe, for guidance and advisory. I would also like to thank other faculty members in the high energy theory group, in particular my defense committee members and letter writers, Prof.~Antal Jevicki, Prof.~Marcus Spradlin, and Prof.~Stephon H.~Alexander, for their support. Finally, I would like to thank my friends within the department (and pity my enemies, both inside the department and elsewhere. Just kidding).
@@ -153,7 +153,12 @@ are motivated by these ideas.
 
 The fundamental reason that it is so difficult to build a consistent quantum theory of
 gravity, is that the theory of general relativity and the theory of quantum mechanics
-are 
+are logically incompatible in their core assumptions. In general relativity the main object
+of study is a (pseudo-)Riemannian manifold. This makes general relativity a local field theory.
+Quantum mechanics on the other hand, is intrinsically non-local, as shown by the experimental
+confirmation of the Bell's inequality. The non-locality comes from the fact that in quantum
+mechanics, a superposition of states is a valid state. This entanglement of states directly
+leads to the conclusion that 
 
 \chapter{Notes on Scrambling in Conformal Field Theory}\label{chap:chaos}
 The onset of quantum chaos in quantum field theory may be studied
