--- a/ref.bib
+++ b/ref.bib
@@ -1804,3 +1804,47 @@ abstract = {We present an investigation of the massless, two-dimentional, intera
     url = {http://functions.wolfram.com/07.23.06.0013.01},
     doi = "{http://functions.wolfram.com/07.23.06.0013.01}"
 }
+
+@article{PhysRevD.14.2460,
+  title = {Breakdown of predictability in gravitational collapse},
+  author = {Hawking, S. W.},
+  journal = {Phys. Rev. D},
+  volume = {14},
+  issue = {10},
+  pages = {2460--2473},
+  numpages = {0},
+  year = {1976},
+  month = {Nov},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.14.2460},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.14.2460}
+}
+
+@article{Chen:2014jwq,
+    author = "Chen, Pisin and Ong, Yen Chin and Yeom, Dong-han",
+    title = "{Black Hole Remnants and the Information Loss Paradox}",
+    eprint = "1412.8366",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    reportNumber = "NORDITA-2014-149",
+    doi = "10.1016/j.physrep.2015.10.007",
+    journal = "Phys. Rept.",
+    volume = "603",
+    pages = "1--45",
+    year = "2015"
+}
+
+@article{PhysRevD.48.3743,
+  title = {The stretched horizon and black hole complementarity},
+  author = {Susskind, Leonard and Thorlacius, L\'arus and Uglum, John},
+  journal = {Phys. Rev. D},
+  volume = {48},
+  issue = {8},
+  pages = {3743--3761},
+  numpages = {0},
+  year = {1993},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.48.3743},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.48.3743}
+}
