--- a/thesis.tex
+++ b/thesis.tex
@@ -34,7 +34,7 @@
 \reader{Antal Jevicki}
 \reader{Stephon Haigh-Solomon Alexander}
 \dean{Andrew G.~Campbell}
-\abstract{The unification of quantum mechanics and general relativity is the holy grail of fundamental theoretical physics. This thesis represents a small part of that effort, where we consider a number of problems that might be of interest to the theoretical studies of black holes and quantum cosmology. Why study black holes and quantum cosmology, one might ask? The answer lies in the fact that they are the only two systems that demand the simultaneous application of quantum mechanics and general relativity. In particular, both have event horizons, which are global structures of the spacetime that prevent events from making causal contact no matter how hard they try. They therefore have become the primary arenas where logical incompatibilities of quantum mechanics and general relativity become the most transparent. One of the most dramatic incompatibilities is the black hole information paradox, which concerns the unitarity of processes that involve the formation and the evaporation of black holes. This thesis will first discuss a proposed resolution to the information paradox, the so-called black hole complementarity program, and a closely linked issue known as quantum scrambling. We will then present a microscopic quantum model of the de-Sitter universe that incorporates the required quantum scrambling on the cosmological horizon. This quantum model of cosmology is a so-called ``holographic'' map between the stretched horizon of the de-Sitter spacetime and the static patch (colloquially known as the ``bulk''). Continuing in a similar vein, the rest of the thesis is concerned with building holographic theories between flat spacetime and its boundary, and we present two holographic theories of the flat spacetime, first for massive scalar particles and then extending the results to gravitons. As these all have something to do with mappings between boundary 2-spheres and their bulk, this is therefore a story of building holography on 2-spheres. Hence the title of this thesis.}
+\abstract{The unification of quantum mechanics and general relativity is the holy grail of fundamental theoretical physics. This thesis represents a small part of that effort, where we consider a number of problems that might be of interest to the theoretical studies of black holes and quantum cosmology. Why study black holes and quantum cosmology, one might ask? The answer lies in the fact that they are the only two systems where it is necessary to apply of quantum mechanics and general relativity simultaneously. In particular, they both have event horizons, which are global structures of the spacetime that prevent events from making causal contact. They therefore have become the primary arenas where logical incompatibilities of quantum mechanics and general relativity can be made the most transparent. One of the most dramatic incompatibilities is the black hole information paradox, which concerns the unitarity of processes that involve the formation and the evaporation of black holes. This thesis will first discuss a proposed resolution to the information paradox, the so-called black hole complementarity program, and a closely linked issue known as quantum scrambling. We will then present a microscopic quantum model of the de-Sitter universe that incorporates the required quantum scrambling on the cosmological horizon. This quantum model of cosmology is a so-called ``holographic'' map between the stretched horizon of the de-Sitter spacetime and the static patch (colloquially known as the ``bulk''). Continuing in a similar vein, the rest of the thesis is concerned with building holographic theories between flat spacetime and its boundary, and we present two holographic theories of the flat spacetime, first for massive scalar particles and then extending the results to gravitons. As these all have something to do with mappings between boundary 2-spheres and their bulk, this is therefore a story of building holography on 2-spheres. Hence the title of this thesis.}
 \abstractpage
 \abstractpage
 \beforepreface
@@ -125,9 +125,9 @@ e-Print: {\tt 1612.07228 [hep-th]}
 \end{description}
 
 \prefacesection{Preface}
-The unification of quantum mechanics and general relativity is the holy grail of fundamental theoretical physics. This thesis represents a small part of that effort, where we consider a number of problems that might be of interest to the theoretical studies of black holes and quantum cosmology. A natural question to ask is: how does the study of black holes and quantum cosmology help us unify quantum mechanics and general relativity? The answer lies in the simple observation that a black hole and our universe both share a number of key features that practically demand the simultaneous application of quantum mechanics and general relativity: they both have a singularity, where matter and energy are infinitely dense, and known laws of physics do not apply, as well as a horizon, which prevents spacetime events from making causal contact no matter how much they want to. They are also intrinsically gravitational systems, meaning that their classical (ie.~non-quantum) description involves only the spacetime geometry\footnote{One might argue that for a charged black hole the full description contains both the Maxwell field and the metric. This is certainly true, but the most important feature, ie.~the singularity and the event horizon structure, involve only the metric}. They therefore have become the primary objects to study if one wants to build a unified theory of quantum gravity, because it is in these two systems that the logical incompatibilities of quantum mechanics and general relativity become most apparent.
+The unification of quantum mechanics and general relativity is the holy grail of fundamental theoretical physics. This thesis represents a small part of that effort, where we consider a number of problems that might be of interest to the theoretical studies of black holes and quantum cosmology. A natural question to ask is: how does the study of black holes and quantum cosmology help us unify quantum mechanics and general relativity? The answer lies in the simple observation that black holes and our universe both share a number of key features that practically demand the simultaneous application of quantum mechanics and general relativity: they both have a singularity, where matter and energy are infinitely dense, and known laws of physics do not apply, as well as a horizon, which prevents spacetime events from making causal contact no matter how much they want to. They are also intrinsically gravitational systems, meaning that their classical (ie.~non-quantum) description involves only the spacetime geometry\footnote{One might argue that for a charged black hole the full description contains both the Maxwell field and the metric. This is certainly true, but the most important feature, ie.~the singularity and the event horizon structure, involve only the metric.}. They therefore have become the primary objects to study if one wants to build a unified theory of quantum gravity, because it is in these two systems that the logical incompatibilities of quantum mechanics and general relativity become most apparent.
 
-One of the most fundamental reason that quantum mechanics is incompatible with general relativity is the existence of entangled states in quantum mechanics. This goes directly against general relativity, where arbitrary superpositions of spacetime geometries do not make any sense (especially when they have different topologies). The prevailing opinion at the moment of this writing is that one should expect general relativity to be an emergent theory as part of a quantum theory of spacetime. One promising idea in this direction is to define a ``holographic'' theory between a quantum mechanical model, and a (semi-)classical gravity in a spacetime with one additional spatial dimension. In other words, objects on the classical spacetime (called the bulk) are mapped into objects in the quantum mechanical model defined on its boundary, and objects in the boundary quantum mechanical models are mapped into objects in the (semi-)classical local field theory in the bulk. This thesis will discuss three separate, but closely linked issues that all have something to do with building holographic theories between the bulk and the boundary. As these boundaries are all two-dimensional spheres, this is therefore a story of building holography on 2-spheres. Hence the title of this thesis.
+One of the most fundamental reason that makes quantum mechanics incompatible with general relativity is the existence of entangled states in quantum mechanics. You can form arbitrary superpositions of quantum states, and these quantum superpositions are still valid quantum states. However, in general relativity arbitrary superpositions of spacetime geometries do not make any sense (especially when they have different topologies). This has motivated the opinion that general relativity should be viewed an emergent theory as part of a complete quantum theory of spacetime, and the idea of defining a ``holographic'' theory between a quantum mechanical model, and a semi-classical gravity in a spacetime with one additional spatial dimension. In other words, objects on the classical spacetime (called the bulk) are mapped into objects in the quantum mechanical model defined on its boundary, and objects in the boundary quantum mechanical models are mapped into objects in the semi-classical local field theory in the bulk. This thesis will discuss three separate, but closely linked issues that all have something to do with building holographic theories between the bulk and the boundary. As these boundaries are all two-dimensional spheres, this is therefore a story of building holography on 2-spheres. Hence the title of this thesis.
 
 \prefacesection{Acknowledgements}
 First of all I would like to thank my advisor, Prof.~David Anthony Lowe, for guidance and advisory. I would also like to thank other faculty members in the high energy theory group, in particular my defense committee members and letter writers, Prof.~Antal Jevicki, Prof.~Marcus Spradlin, and Prof.~Stephon H.~Alexander, for their support. Finally, I would like to thank my friends within the department (and pity my enemies, both inside the department and elsewhere. Just kidding).
@@ -151,14 +151,71 @@ relativity. There are several closely related ideas in play here, so in this Int
 we will review the relevant literature and explain how the work in the rest of the thesis
 are motivated by these ideas.
 
-The fundamental reason that it is so difficult to build a consistent quantum theory of
+The fundamental reason why it is so difficult to build a consistent quantum theory of
 gravity, is that the theory of general relativity and the theory of quantum mechanics
 are logically incompatible in their core assumptions. In general relativity the main object
 of study is a (pseudo-)Riemannian manifold. This makes general relativity a local field theory.
-Quantum mechanics on the other hand, is intrinsically non-local, as shown by the experimental
-confirmation of the Bell's inequality. The non-locality comes from the fact that in quantum
-mechanics, a superposition of states is a valid state. This entanglement of states directly
-leads to the conclusion that 
+Quantum mechanics on the other hand, is intrinsically non-local. The non-locality comes from
+the fact that in quantum mechanics, a superposition of states is a valid state, and as a result
+one can build entangled states of two particles that are arbitrarily far apart. This entanglement
+of states directly leads to a paradox known as the black hole information paradox, which we will
+now explain.
+
+The black hole information paradox follows from a famous result from Hawking \cite{PhysRevD.14.2460},
+now known as the Hawking radiation, which says that black holes of a given mass $M$ radiate with
+a temperature $T_{\rm H}$ that is proportional to its surface gravity on the horizon. For
+Schwarzschild black holes this is inversely proportional to its mass:
+\[
+T_{\rm H} = \frac{1}{8\pi M}
+\]
+in Planck units ($c=\hbar = G = k_{\rm B} = 1$). This radiation has a thermal (black body)
+spectrum, and it takes energy away from the black hole, which implies that black holes
+evaporate and will eventually disappear\footnote{We assume that after evaporation, there is nothing left for the black hole
+and spacetime is back to normal (locally) Minkowski spacetime without any singularity.
+A different resolution to the information paradox instead proposes that a Planck-scale
+remnant is left over as a result of black hole evaporation, which carries the information that has
+been captured by the event horizon. Although an interesting, if not somewhat problematic idea
+(see, for instance, Ref.~\cite{Chen:2014jwq} for a review), in this thesis we assume the
+absence of any Planck-scale remnant.}. This may not seem problematic by itself, and it is a reasonably robust result
+that follows directly from semi-classical physics near the horizon, without invoking any
+Planck-scale assumptions. However, the fact that the radiations have a thermal spectrum
+violates quantum mechanics in the most profound way: imagine a collection of particles
+in a pure quantum state that forms a black hole, which then evaporates into a thermal
+state. This is therefore a scattering process which turns
+a pure state into a thermal density matrix, so it cannot be unitary in general. As unitarity
+is equivalent to information conservation, we therefore have a paradox where any process
+that involves black holes as intermediate states have information loss.
+
+The core geometric property of black holes that directly leads to the information paradox,
+is that once information has crossed the event horizon, it will never be able to get out,
+at least not until the black hole has completely evaporated. An idea is therefore
+to propose that the Hawking radiations from the horizon are not completely thermal,
+but instead carry subtle deviations that encode the incoming state. In other words, the
+event horizon, or more correctly the ``stretched horizon'' that is one Planck length outside
+the event horizon, scrambles the incoming information and ``reflects'' them via subtle
+correlations in the outgoing Hawking radiations. However, on closer inspection this leads
+to a new paradox: if a particle carrying some information crosses the event horizon,
+the equivalence principle implies that the free-falling observer sees nothing special
+about the event horizon, certainly nothing so dramatic that destroys the information.
+At the same time though, the information is being reflected by the stretched horizon,
+so one would be able to see two copies of the same quantum state by first collecting
+the Hawking radiations and then jump into the event horizon. This is a direct violation
+of the quantum no-cloning theorem \cite{nielsen2001quantum}, which itself follows from
+linearity and unitarity of quantum mechanics.
+
+There is a clever way out of this, and the idea is now known as the complementarity
+principle of black holes \cite{PhysRevD.48.3743}. This idea draws from the lesson we
+have learned from both relativity and quantum mechanics, which is that descriptions
+of physics should depend on the observer. It is indeed true that information seems to
+appear in two different places, but no single observer can observe them simultaneously.
+For an observer to observe the information reflected by the stretched horizon, he
+must first wait long enough to collect enough Hawking radiations to reconstruct the original
+information. If the stretched horizon takes too long to reflect information, the observer
+would not have enough time once he jumps into the event horizon, because the original
+carrier would have died at the singularity.
+
+This is explained in detail in Ref.~\cite{Sekino:2008he}, but the upshot is that
+
 
 \chapter{Notes on Scrambling in Conformal Field Theory}\label{chap:chaos}
 The onset of quantum chaos in quantum field theory may be studied
