--- a/thesis.tex
+++ b/thesis.tex
@@ -127,10 +127,10 @@ e-Print: {\tt 1612.07228 [hep-th]}
 \prefacesection{Preface}
 The unification of quantum mechanics and general relativity is the holy grail of fundamental theoretical physics. This thesis represents a small part of that effort, where we consider a number of problems that might be of interest to the theoretical studies of black holes and quantum cosmology. A natural question to ask is: how does the study of black holes and quantum cosmology help us unify quantum mechanics and general relativity? The answer lies in the simple observation that black holes and our universe both share a number of key features that practically demand the simultaneous application of quantum mechanics and general relativity: they both have a singularity, where matter and energy are infinitely dense, and known laws of physics do not apply, as well as a horizon, which prevents spacetime events from making causal contact no matter how much they want to. They are also intrinsically gravitational systems, meaning that their classical (ie.~non-quantum) description involves only the spacetime geometry\footnote{One might argue that for a charged black hole the full description contains both the Maxwell field and the metric. This is certainly true, but the most important feature, ie.~the singularity and the event horizon structure, involve only the metric.}. They therefore have become the primary objects to study if one wants to build a unified theory of quantum gravity, because it is in these two systems that the logical incompatibilities of quantum mechanics and general relativity become most apparent.
 
-One of the most fundamental reason that makes quantum mechanics incompatible with general relativity is the existence of entangled states in quantum mechanics. You can form arbitrary superpositions of quantum states, and these quantum superpositions are still valid quantum states. However, in general relativity arbitrary superpositions of spacetime geometries do not make any sense (especially when they have different topologies). This has motivated the opinion that general relativity should be viewed an emergent theory as part of a complete quantum theory of spacetime, and the idea of defining a ``holographic'' theory between a quantum mechanical model, and a semi-classical gravity in a spacetime with one additional spatial dimension. In other words, objects on the classical spacetime (called the bulk) are mapped into objects in the quantum mechanical model defined on its boundary, and objects in the boundary quantum mechanical models are mapped into objects in the semi-classical local field theory in the bulk. This thesis will discuss three separate, but closely linked issues that all have something to do with building holographic theories between the bulk and the boundary. As these boundaries are all two-dimensional spheres, this is therefore a story of building holography on 2-spheres. Hence the title of this thesis.
+One of the most fundamental reason that makes quantum mechanics incompatible with general relativity is the existence of entangled states in quantum mechanics. You can form arbitrary superpositions of quantum states, and these quantum superpositions are still valid quantum states. However, in general relativity arbitrary superpositions of spacetime geometries do not make any sense (especially when they have different topologies). This has motivated the opinion that general relativity should be viewed an emergent theory as part of a complete quantum theory of spacetime, and the idea of defining a ``holographic'' theory between a quantum mechanical model and a semi-classical gravity in a spacetime with one additional spatial dimension. In other words, objects on the classical spacetime (called the bulk) are mapped into objects in the quantum mechanical model defined on its boundary, and objects in the boundary quantum mechanical models are mapped into objects in the semi-classical local field theory in the bulk. This thesis will discuss three separate, but closely linked issues that all have something to do with building holographic theories between the bulk and the boundary. As these boundaries are all two-dimensional spheres, this is therefore a story of building holography on 2-spheres. Hence the title of this thesis.
 
 \prefacesection{Acknowledgements}
-First of all I would like to thank my advisor, Prof.~David Anthony Lowe, for guidance and advisory. I would also like to thank other faculty members in the high energy theory group, in particular my defense committee members and letter writers, Prof.~Antal Jevicki, Prof.~Marcus Spradlin, and Prof.~Stephon H.~Alexander, for their support. Finally, I would like to thank my friends within the department (and pity my enemies, both inside the department and elsewhere. Just kidding).
+First of all I would like to thank my advisor, Prof.~David Anthony Lowe, for guidance and advisory. I would also like to thank other faculty members in the high energy theory group, in particular my defense committee members and letter writers, Prof.~Antal Jevicki, Prof.~Marcus Spradlin, and Prof.~Stephon H.~Alexander, for their support. Finally, I would like to thank Yiming Xing from the condensed matter experiment group for enlightening discussions during hot-pot nights.
 
 I would also like to use this opportunity to thank my weightlifting coaches, Jeremy and Tommy from PBC strength and conditioning, and Dave, Jarred, and James from the Providence Barbell Club for their help in athletic development, in particular for helping me win the men's 89kg weightclass Gold Medal in the USAW meet down at Westerly in December 2021. I also just realized that I am morally obliged to thank Steve, not just because of the shirt but also because of the very threatening look that he gave me when I mentioned that his name wasn't here. This gratitude (although in considerably less strength than the one for Steve) is also extended to the other team members of the Providence Barbell Club (at least the ones I like!).
 
@@ -146,7 +146,7 @@ This thesis is based on the materials published in the following four papers:
   \item{Conformal Wavefunctions for Graviton Amplitudes, {\sl JHEP} 01 (2022) 148}
 \end{enumerate}
 As we have explained in the Preface, the results in these papers will hopefully contribute to
-the overall goal of building a consistent theory that unites quantum mechanics and general
+the overall goal of building a consistent theory that unifies quantum mechanics and general
 relativity. There are several closely related ideas in play here, so in this Introduction
 we will review the relevant literature and explain how the work in the rest of the thesis
 are motivated by these ideas.
