--- a/thesis.tex
+++ b/thesis.tex
@@ -130,7 +130,7 @@ The unification of quantum mechanics and general relativity is the holy grail of
 One of the most fundamental reason that makes quantum mechanics incompatible with general relativity is the existence of entangled states in quantum mechanics. You can form arbitrary superpositions of quantum states, and these quantum superpositions are still valid quantum states. However, in general relativity arbitrary superpositions of spacetime geometries do not make any sense (especially when they have different topologies). This has motivated the opinion that general relativity should be viewed an emergent theory as part of a complete quantum theory of spacetime, and the idea of defining a ``holographic'' theory between a quantum mechanical model and a semi-classical gravity in a spacetime with one additional spatial dimension. In other words, objects on the classical spacetime (called the bulk) are mapped into objects in the quantum mechanical model defined on its boundary, and objects in the boundary quantum mechanical models are mapped into objects in the semi-classical local field theory in the bulk. This thesis will discuss three separate, but closely linked issues that all have something to do with building holographic theories between the bulk and the boundary. As these boundaries are all two-dimensional spheres, this is therefore a story of building holography on 2-spheres. Hence the title of this thesis.
 
 \prefacesection{Acknowledgements}
-First of all I would like to thank my advisor, Prof.~David Anthony Lowe, for guidance and advisory. I would also like to thank other faculty members in the high energy theory group, in particular my defense committee members and letter writers, Prof.~Antal Jevicki, Prof.~Marcus Spradlin, and Prof.~Stephon H.~Alexander, for their support. Finally, I would like to thank Yiming Xing from the condensed matter experiment group for enlightening discussions during hot-pot nights.
+First of all I would like to thank my advisor, Prof.~David Anthony Lowe, for guidance and advisory. I would also like to thank other faculty members in the high energy theory group, in particular my defense committee members and letter writers, Prof.~Antal Jevicki, Prof.~Marcus Spradlin, and Prof.~Stephon H.~Alexander, for their support. Finally, I would like to thank my friend Yiming Xing from the condensed matter experiment group for many enlightening discussions.
 
 I would also like to use this opportunity to thank my weightlifting coaches, Jeremy and Tommy from PBC strength and conditioning, and Dave, Jarred, and James from the Providence Barbell Club for their help in athletic development, in particular for helping me win the men's 89kg weightclass Gold Medal in the USAW meet down at Westerly in December 2021. I also just realized that I am morally obliged to thank Steve, not just because of the shirt but also because of the very threatening look that he gave me when I mentioned that his name wasn't here. This gratitude (although in considerably less strength than the one for Steve) is also extended to the other team members of the Providence Barbell Club (at least the ones I like!).
 
